# copy_photos

./: README.md  main.py  pyproject.toml
src/: constants.py  copy_photos_command.py  remove_photos_command.py
test/: test_copy_photos_command.py  test_remove_photos_command.py  utils.py
