[tool.poetry]
name = "copy_photos"
version = "0.1.0"
description = ""
authors = ["Francisco de Souza Junior <fsjunior@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
tdqm = "^0.0.1"
cleo = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.4"
unittest = "^0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
